--- a/app/src/main/res/layout/activity_different_flags_topic.xml
+++ b/app/src/main/res/layout/activity_different_flags_topic.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="tcd.training.com.trainingproject.MainActivity">
+    tools:context="tcd.training.com.trainingproject.DifferentFlagsTopicActivity1">
 
     <ListView
-        android:id="@+id/lv_topics_list"
+        android:id="@+id/lv_flag_options_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
