--- a/app/src/main/res/layout/activity_different_flags_topic3.xml
+++ b/app/src/main/res/layout/activity_different_flags_topic3.xml
@@ -4,13 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="tcd.training.com.trainingproject.MainActivity">
-
-    <ListView
-        android:id="@+id/lv_topics_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </ListView>
+    tools:context="tcd.training.com.trainingproject.DifferentFlagsTopicActivity3">
 
 </android.support.constraint.ConstraintLayout>
