--- a/app/src/main/res/layout/activity_pager_tab_strip_with_fragment_demo.xml
+++ b/app/src/main/res/layout/activity_pager_tab_strip_with_fragment_demo.xml
@@ -5,20 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="tcd.training.com.trainingproject.FragmentsDemo.TabLayoutDemo.TabLayoutWithFragmentActivity">
-
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:tabMode="scrollable" />
+    tools:context="tcd.training.com.trainingproject.FragmentsDemo.PagerTabStripDemo.PagerTabStripWithFragmentsActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@android:color/white"/>
+        android:layout_height="match_parent">
 
+        <android.support.v4.view.PagerTabStrip
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:background="@color/colorPrimary"
+            android:textColor="#fff"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp" />
+
+    </android.support.v4.view.ViewPager>
 
 </LinearLayout>
