--- a/app/src/main/res/layout-land/activity_flexible_ui_with_fragments.xml
+++ b/app/src/main/res/layout-land/activity_flexible_ui_with_fragments.xml
@@ -1,6 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="tcd.training.com.trainingproject.FragmentsDemo.FlexibleUIWithFragments.FlexibleUIWithFragmentsActivity">
 
+    <TextView
+        android:id="@+id/tv_button_clicked_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="16dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <fragment
+            android:id="@+id/frag_titles"
+            class="tcd.training.com.trainingproject.FragmentsDemo.FlexibleUIWithFragments.TitlesFragment"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <LinearLayout
+            android:id="@+id/details"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="3"
+            android:background="?android:attr/detailsElementBackground"/>
+    </LinearLayout>
 </LinearLayout>
