--- a/app/src/main/res/layout/activity_flexible_ui_with_fragments.xml
+++ b/app/src/main/res/layout/activity_flexible_ui_with_fragments.xml
@@ -5,6 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="tcd.training.com.trainingproject.FragmentsDemo.FlexibleUIWithFragmentsActivity">
+    tools:context="tcd.training.com.trainingproject.FragmentsDemo.FlexibleUIWithFragments.FlexibleUIWithFragmentsActivity">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/rotate_screen_message"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_gravity="center"/>
+
+    <fragment
+        android:id="@+id/frag_titles"
+        class="tcd.training.com.trainingproject.FragmentsDemo.FlexibleUIWithFragments.TitlesFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
