--- a/app/src/main/res/layout/activity_fragments_demo.xml
+++ b/app/src/main/res/layout/activity_fragments_demo.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="tcd.training.com.trainingproject.FragmentsDemo">
+    android:orientation="vertical"
+    tools:context="tcd.training.com.trainingproject.FragmentsDemo.FragmentsDemoActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <ListView
+        android:id="@+id/lv_fragments_demo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </ListView>
+
+</LinearLayout>
