--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,2 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <declare-styleable name="CircleView">
+        <attr name="circleColor" format="color" />
+        <attr name="circleLabel" format="string" />
+        <attr name="labelColor" format="color" />
+        <attr name="circleSize" format="enum">
+            <enum name="small" value="1" />
+            <enum name="medium" value="2" />
+            <enum name="large" value="3" />
+        </attr>
+    </declare-styleable>
+</resources>
