--- a/DemoProject/app/src/main/res/layout/activity_communicate_between_activities.xml
+++ b/DemoProject/app/src/main/res/layout/activity_communicate_between_activities.xml
@@ -4,7 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="tcd.training.com.trainingproject.CommunicateBetweenActivities.CommunicateBetweenActivitiesActivity">
+    android:orientation="vertical"
+    tools:context="tcd.training.com.trainingproject.CommunicationBetweenActivities.CommunicateBetweenActivitiesActivity">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:text="@string/choose_send_option"/>
 
     <ListView
         android:id="@+id/lv_topics_list"
