--- a/DemoProject/app/src/main/res/layout-land/activity_flexible_ui_with_fragments.xml
+++ b/DemoProject/app/src/main/res/layout-land/activity_flexible_ui_with_fragments.xml
@@ -6,16 +6,33 @@
     android:layout_height="match_parent"
     tools:context="tcd.training.com.trainingproject.FragmentsDemo.FlexibleUIWithFragments.FlexibleUIWithFragmentsActivity">
 
-    <TextView
-        android:id="@+id/tv_button_clicked_indicator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="16dp"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_button_clicked_indicator"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:layout_margin="16dp"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:layout_margin="16dp"
+            android:text="@string/send_data_to_fragment_message"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="8"
         android:orientation="horizontal">
         <fragment
             android:id="@+id/frag_titles"
@@ -32,4 +49,5 @@
             android:layout_weight="3"
             android:background="?android:attr/detailsElementBackground"/>
     </LinearLayout>
+
 </LinearLayout>
