--- a/DemoProject/app/src/main/res/layout/fragment_details.xml
+++ b/DemoProject/app/src/main/res/layout/fragment_details.xml
@@ -21,9 +21,22 @@
         android:text="@string/tap_send_data_message"/>
 
     <Button
-        android:id="@+id/btn_send_data"
+        android:id="@+id/btn_send_data_using_interface"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/click_me"/>
+        android:text="@string/send_using_interface"/>
+
+    <Button
+        android:id="@+id/btn_send_data_using_get_activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/send_using_get_activity"/>
+
+    <TextView
+        android:id="@+id/tv_receive_data_from_activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_gravity="center"/>
 
 </LinearLayout>
