--- a/DemoProject/app/src/main/res/layout/activity_intent_service_demo.xml
+++ b/DemoProject/app/src/main/res/layout/activity_intent_service_demo.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_margin="16dp"
-    tools:context="tcd.training.com.trainingproject.ServicesDemo.IntentService.IntentServiceDemoActivity">
+    tools:context="tcd.training.com.trainingproject.ServiceAndThreadDemos.IntentService.IntentServiceDemoActivity">
 
     <TextView
         android:layout_width="match_parent"
