--- a/DemoProject/app/src/main/res/layout/activity_services_demo.xml
+++ b/DemoProject/app/src/main/res/layout/activity_services_demo.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="tcd.training.com.trainingproject.ServicesDemo.ServicesDemoActivity">
+    tools:context="tcd.training.com.trainingproject.ServiceAndThreadDemos.ServicesDemoActivity">
 
     <ListView
         android:id="@+id/lv_topics_list"
