--- a/DemoProject/app/src/main/res/layout/activity_thread_demo.xml
+++ b/DemoProject/app/src/main/res/layout/activity_thread_demo.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="tcd.training.com.trainingproject.ServicesDemo.ThreadPoolExecutorDemo.ThreadPoolExecutorDemoActivity">
+    tools:context="tcd.training.com.trainingproject.ServiceAndThreadDemos.ThreadPoolExecutorDemo.ThreadPoolExecutorDemoActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
