--- a/DemoProject/app/src/main/res/layout/activity_thread_demo.xml
+++ b/DemoProject/app/src/main/res/layout/activity_thread_demo.xml
@@ -20,6 +20,7 @@
                 android:id="@+id/edt_number_of_images"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="number"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:hint="@string/number_of_images"/>
