--- a/DemoProject/app/src/main/res/layout/activity_cache_image_using_memory_demo.xml
+++ b/DemoProject/app/src/main/res/layout/activity_cache_image_using_memory_demo.xml
@@ -43,6 +43,16 @@
 
         </LinearLayout>
 
+        <Button
+            android:id="@+id/btn_refresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:visibility="gone"
+            android:text="@string/refresh"/>
+
         <LinearLayout
             android:id="@+id/linear_layout_images_list"
             android:layout_width="match_parent"
