--- a/app/src/main/res/layout/activity_choose_image_from_gallery.xml
+++ b/app/src/main/res/layout/activity_choose_image_from_gallery.xml
@@ -11,7 +11,8 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_slide_show"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:visibility="gone">
 
     </android.support.v4.view.ViewPager>
@@ -27,5 +28,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/pick_using_custom_gallery"/>
+
+    <Button
+        android:id="@+id/btn_pick_using_custom_library"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/pick_using_library"/>
 
 </LinearLayout>
