--- a/app/src/main/res/layout/custom_gallery_item.xml
+++ b/app/src/main/res/layout/custom_gallery_item.xml
@@ -3,10 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <tcd.training.com.trainingproject.ExternalHardware.Gallery.SquareImageView
         android:id="@+id/iv_thumbnail"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"/>
 
     <CheckBox
         android:id="@+id/cb_pick"
