--- a/app/src/main/res/layout/slide_show_item.xml
+++ b/app/src/main/res/layout/slide_show_item.xml
@@ -6,6 +6,13 @@
     <ImageView
         android:id="@+id/iv_image_demo"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <TextView
+        android:id="@+id/tv_page_number_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
 
 </LinearLayout>
