minor update - add "Take photo using library camera" demo - some minor changes

--- a/app/src/main/res/layout/activity_take_photo_topic.xml
+++ b/app/src/main/res/layout/activity_take_photo_topic.xml
@@ -22,6 +22,12 @@
         android:text="@string/take_photo_default_camera"/>
 
     <Button
+        android:id="@+id/btn_take_photo_library"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/take_photo_library"/>
+
+    <Button
         android:id="@+id/btn_take_photo_camera_api"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
