add demos - add "Using HttpUrlConnection" demo - add "Using Volley library" demo (incomplete)

--- a/app/src/main/res/layout/activity_external_internal_intent.xml
+++ b/app/src/main/res/layout/activity_external_internal_intent.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="tcd.training.com.trainingproject.ExternalInternalIntentActivity">
+    tools:context="tcd.training.com.trainingproject.ExternalInternalIntent.ExternalInternalIntentActivity">
 
     <Button
         android:id="@+id/btn_external_intent"
