--- a/app/src/main/res/layout/activity_persistent_storage.xml
+++ b/app/src/main/res/layout/activity_persistent_storage.xml
@@ -6,6 +6,28 @@
     android:layout_height="match_parent"
     tools:context="tcd.training.com.trainingproject.PersistentStorage.PersistentStorageActivity">
 
+    <!--<android.support.v7.widget.RecyclerView-->
+        <!--android:id="@+id/rv_notes_list"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="0dp"-->
+        <!--app:layout_constraintTop_toTopOf="parent"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--app:layout_constraintRight_toRightOf="parent">-->
+
+    <!--</android.support.v7.widget.RecyclerView>-->
+
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/fab"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginRight="32dp"-->
+        <!--android:layout_marginBottom="32dp"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintRight_toRightOf="parent"-->
+        <!--android:src="@android:drawable/ic_input_add"-->
+        <!--android:tint="@android:color/white"/>-->
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_notes_list"
         android:layout_width="match_parent"
