--- a/app/src/main/res/layout-land/activity_flexible_ui_with_fragments.xml
+++ b/app/src/main/res/layout-land/activity_flexible_ui_with_fragments.xml
@@ -33,7 +33,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="8"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:baselineAligned="false">
         <fragment
             android:id="@+id/frag_titles"
             class="tcd.training.com.trainingproject.Fragments.FlexibleUIWithFragments.TitlesFragment"
