--- a/app/src/main/res/layout/activity_cache_image_using_memory_demo.xml
+++ b/app/src/main/res/layout/activity_cache_image_using_memory_demo.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="16dp"
-    tools:context="tcd.training.com.trainingproject.ImagesProcessing.CacheImages.CacheImageUsingMemoryActivity">
+    tools:context="tcd.training.com.trainingproject.ImageProcessing.CacheImages.CacheImageUsingMemoryActivity">
 
     <LinearLayout
         android:id="@+id/linear_layout_root"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_margin="16dp">
 
