--- a/app/src/main/res/layout/activity_compass_with_magnetic_field_sensor.xml
+++ b/app/src/main/res/layout/activity_compass_with_magnetic_field_sensor.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="fitCenter"
+        android:contentDescription="@string/north_direction"
         android:src="@drawable/north_direction_100px"/>
 
 </LinearLayout>
