--- a/app/src/main/res/layout/activity_gyro_scope.xml
+++ b/app/src/main/res/layout/activity_gyro_scope.xml
@@ -26,6 +26,7 @@
             android:scaleType="matrix"
             android:adjustViewBounds="true"
             android:layout_gravity="center"
+            android:contentDescription="@string/image"
             android:src="@drawable/landscape_medium"/>
 
     </FrameLayout>
