--- a/app/src/main/res/layout/activity_load_image_demo.xml
+++ b/app/src/main/res/layout/activity_load_image_demo.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="16dp"
-    tools:context="tcd.training.com.trainingproject.ImagesProcessing.LoadImages.LoadImageFromSdCardActivity">
+    tools:context="tcd.training.com.trainingproject.ImageProcessing.LoadImages.LoadImageFromSdCardActivity">
 
     <LinearLayout
         android:id="@+id/linear_layout_images_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp">
