--- a/app/src/main/res/layout/activity_obtain_location.xml
+++ b/app/src/main/res/layout/activity_obtain_location.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <RadioGroup
@@ -108,6 +108,7 @@
             android:id="@+id/iv_map"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/map_image"
             android:scaleType="fitCenter"/>
 
         <Button
