--- a/app/src/main/res/layout/activity_take_photo_using_camera2_api.xml
+++ b/app/src/main/res/layout/activity_take_photo_using_camera2_api.xml
@@ -21,6 +21,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:src="@android:drawable/ic_menu_camera"
+        android:contentDescription="@string/capture"
         android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp" />
 
