--- a/app/src/main/res/layout/slide_show_item.xml
+++ b/app/src/main/res/layout/slide_show_item.xml
@@ -7,7 +7,8 @@
         android:id="@+id/iv_image_demo"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:contentDescription="@string/image"/>
 
     <TextView
         android:id="@+id/tv_page_number_indicator"
